examples/parser/invalid/var_definitions_array_index.xana

not_valid_one :: [(1+1) :: int]

def main() do
end